# AssetsUpdater

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: auto-pr.yml  build.yml  ci.yml  test.yml
scripts/: gh.py
scripts/style/: prompt.py
src/updater/: __init__.py  __main__.py  download.py  exc.py  github.py  type.py  utils.py  version.py
test/: conftest.py  test_download.py  test_github.py  test_init.py  test_utils.py
