[tool.poetry]
name = "AssetsUpdater"
version = "1.5.1"
description = "Update assets from network."
authors = ["JamzumSum <zzzzss990315@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JamzumSum/AssetsUpdater"
repository = "https://github.com/JamzumSum/AssetsUpdater"
packages = [{ include = "updater", from = "src" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/JamzumSum/AssetsUpdater/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
packaging = "^21.3"
httpx = "~0.23.0"
socksio = { git = "https://github.com/JamzumSum/socksio.git", rev = "master" }
aiofiles = "^22.1.0"
# extras: tui
rich = { version = "^12.6.0", optional = true }

[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "~0.20.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
isort = "^5.10.1"


[tool.poetry.extras]
tui = ["rich"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# entry-points
[tool.poetry.scripts]
gh-assets = { callable = "scripts.gh:main", extras = ["tui"] }

# customize begin
[tool.pytest.ini_options]
pythonpath = 'src'
asyncio_mode = 'strict'
log_cli = 1
log_cli_level = 'WARNING'

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
target-version = ['py37']
