[metadata]
name = AssetsUpdater
version = attr: updater.VERSION
description = Update assets from network.
author = JamzumSum
author_email = zzzzss990315@gmail.com
license = MIT
python_requires = >=3.8

[options]
python_requires = >=3.8
install_requires = 
    requests
    packaging
tests_require = 
    pytest
packages = find:
package_dir=
    = src
include_package_data = True

[options.packages.find]
where=src

[options.extras_require]
async = aiohttp; aiofiles
